--- a/main.tex
+++ b/main.tex
@@ -166,6 +166,13 @@
 
 
 
+% Results
+% -------------------------
+\import{./}{Results.tex}
+\clearpage
+
+
+
 
 % Proofs
 % -------------------------
