--- a/Results.tex
+++ b/Results.tex
@@ -2,6 +2,27 @@
 
 \subsection{Μετρήσεις}
 
+
+\begin{table}[ht]
+\centering
+     \begin{tabular}{||c | c  c  c ||} 
+        \hline
+        Αρχιτεκτονική & Max Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix  & 0.39  & 216.70    & 50.25 \\ 
+        \hline
+        Ling    & 0.39  & 237.66    & 49.91 \\
+        \hline
+        Jackson & 0.35  & 281.51    & 58.69 \\
+        \hline
+    \end{tabular}
+\caption{Μετρήσεις 8-bit}
+\label{result_table_8}
+\end{table}
+
+
+
+
 \begin{table}[ht]
 \centering
      \begin{tabular}{||c | c  c  c ||} 
@@ -16,8 +37,47 @@
         \hline
     \end{tabular}
 \caption{Μετρήσεις 16-bit}
-\label{}
+\label{result_table_16}
 \end{table}
 
+
+
+
+\begin{table}[ht]
+\centering
+     \begin{tabular}{||c | c  c  c ||} 
+        \hline
+        Αρχιτεκτονική & Max Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix  & 0.55  & 1319.29    & 265.71 \\ 
+        \hline
+        Ling    & 0.58  & 1354.47    & 275.13 \\
+        \hline
+        Jackson & 0.48  & 1679.46    & 336.28 \\
+        \hline
+    \end{tabular}
+\caption{Μετρήσεις 32-bit}
+\label{result_table_32}
+\end{table}
+
+
+
+
+\begin{table}[ht]
+\centering
+     \begin{tabular}{||c | c  c  c ||} 
+        \hline
+        Αρχιτεκτονική & Max Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix  & 0.67  & 3100.09    & 596.56 \\ 
+        \hline
+        Ling    & 0.65  & 3170.45    & 612.25 \\
+        \hline
+        Jackson & 0.57  & 4049.84    & 766.75 \\
+        \hline
+    \end{tabular}
+\caption{Μετρήσεις 64-bit}
+\label{result_table_64}
+\end{table}
 
 
