--- a/modAdder.tex
+++ b/modAdder.tex
@@ -12,6 +12,10 @@
 Στην παρούσα ενότητα θα μελετηθούν οι αθροιστές υπολοίπου $2^n-1$ όπου η επιτάχυνση τους είναι ο σκοπός μας.
 
 
+
+
+
+
 \subsection{Basic Operation}
 Ο μαθηματικός υπολογισμός του αθροίσματος υπολοίπου $2^n-1$ στην πραγματικότητα είναι 
 ένας υπο-συνθήκη υπολογισμός με συνθήκη $A+B < 2^n$ και ορίζεται ως 
@@ -49,8 +53,17 @@
 \textcolor{red}{[Βάλε εικόνα του Επιλογής κρατουμένου αθροιστή $2^n-1$]}
 \\\\
 
+
+
+
+
+
+
 \subsection{Architectures Improvements}
 
+Χρησιμοποιώντας τον ειδικό τελεστή που παρουσιάστηκε στο κεφάλαιο 4 $"\circledast"$
+ο αθροιστής υπολοίπου $2^n-1$ μπορεί να υλοποιηθεί με ένα ακόμα παράλληλο τμήμα 
+με αποτέλεσμα να μειωθεί κατά ένα επίπεδο λιγότερο ο υπολογισμός του.
 
 
 
