--- a/references.bib
+++ b/references.bib
@@ -33,3 +33,9 @@ author = {Lampros Kalampoukas and Dimitris Nikolos and Costas Efstathiou and Har
 title = {High-Speed Parallel-Prefix Modulo $2^n-1$ Adders},
 year = {2000}
 }
+
+@Article{ling,
+author = {H. Ling},
+title = {High speed binary adder},
+year = {1981}
+}
