--- a/Development.tex
+++ b/Development.tex
@@ -42,26 +42,37 @@
 %---------------------------------------------------
 
 % Figure
-% HA-Schematic
+%
 %--------------------------------------------
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\textwidth]{J8_Color.png}
 \caption{Jackson 8-bit $2^n-1$ Adder}
-\label{HASchematic}
+\label{Jackson_8-bit_Tree}
 \end{figure}
+
+
+
+
 
 Επίπεδο 1:\\
 \begin{equation}
 \begin{split}
 p_i &= a_i + b_i\\
 g_i &= a_i * b_i\\
+x_i &= a_i \oplus b_i
+\end{split}
+\end{equation}
+\\
+Επίπεδο 2:\\
+\begin{equation}
+\begin{split}
 R^1_{i:i-1} &= g_i + g_{i-1}\\
 Q^1_{i:i-1} &= p_i * p_{i-1}\\
 \end{split}
 \end{equation}
 \\
-Επίπεδο 2:\\
+Επίπεδο 3:\\
 \begin{equation}
 \begin{split}
 R^3_{i:i-7} =& R^1_{i:i-1} + R^1_{i-2:i-3} + Q^1_{i-3:i-4} R^1_{i-4:i-5} \\
@@ -80,11 +91,17 @@ D_{i:i-2} &= G_{i:i-1} + P_{i:i-2}\\
 D_{i:i-2} &= g_i + p_ig_{i-1} + p_ip_{i-1}p_{i-2}
 \end{split}
 \end{equation}
-
-Sum computation:\\
+\\
+Επίπεδο 5 - Sum computation:\\
 \begin{equation}
-sum_i = !R^3_{i-1:i-8} * (a_i \oplus b_i) + R^3_{i-1:i-8} * (a_i \oplus b_i \oplus D_{i-1:i-3})
+% sum_i = !R^3_{i-1:i-8} * (a_i \oplus b_i) + R^3_{i-1:i-8} * (a_i \oplus b_i \oplus D_{i-1:i-3})
+sum_i = R^3_{i-1:i-8} ? (x_i \oplus D_{i-1:i-3}) : x_i
 \end{equation}
+
+
+
+
+
 
 Για παράδειγμα:\\
 \rule{\linewidth}{0.5mm}
