--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -88,16 +88,14 @@ $\circledast$ την παρακάτω λειτουργιά :
 \end{split}
 \end{equation*}
 
-Παρακάτω παρουσιάζεται ένα γράφημα-δέντρο ( Εικόνα [\ref{Serial-PrefixTree}] ) ενός απλού διάδοσης κρατουμένου 
-αθροιστή σε αναγόμενο σε πρόβλημα προθέματος. 
-\\
-\begin{figure}[ht]
+Παρακάτω παρουσιάζεται ένα γράφημα-δέντρο ( Εικόνα \ref{Serial-PrefixTree} ) 
+ενός απλού διάδοσης κρατουμένου αθροιστή σε αναγόμενο σε πρόβλημα προθέματος.\\ 
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.45]{Serial-Prefix.png}
 \caption{Serial-Prefix Tree Adder}
 \label{Serial-PrefixTree}
 \end{figure}
-\\
 Σε κάθε μαύρο κόμβο ουσιαστικά υλοποιείται η λογική συνάρτηση του τελεστή $\circledast$
 που παρουσιάστηκε προηγουμένως. Ο παραπάνω αθροιστής υλοποιεί τον προθεματικό αλγόριθμο
 σειριακά με αποτέλεσμα να είναι πολύ αργό το μοντέλο αλλά να καταλαμβάνει μικρότερο εμβαδόν
@@ -116,7 +114,7 @@ $\circledast$ την παρακάτω λειτουργιά :
 
 \subsubsection{Ladner-Fischer Adder}
 
-\begin{figure}[ht]
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.5]{Ladner-Fischer.png}
 \caption{Ladner-Fischer Prefix Tree Adder}
