Updates from ShareLaTeX

--- a/Ling.tex
+++ b/Ling.tex
@@ -10,7 +10,7 @@
 
 \subsection{Βασική Θεωρία}
 
-Ξεκινώντας απο την παρακάτω ισσοτητα 
+Ξεκινώντας από την παρακάτω ισότητα 
 \begin{equation}
     g_i = g_i*p_i
 \end{equation}
