--- a/Results.tex
+++ b/Results.tex
@@ -3,7 +3,7 @@
 \subsection{Μετρήσεις}
 
 
-\begin{table}[ht]
+\begin{table}[H]
 \centering
      \begin{tabular}{||c | c  c  c ||} 
         \hline
@@ -23,7 +23,7 @@
 
 
 
-\begin{table}[ht]
+\begin{table}[H]
 \centering
      \begin{tabular}{||c | c  c  c ||} 
         \hline
@@ -43,7 +43,7 @@
 
 
 
-\begin{table}[ht]
+\begin{table}[H]
 \centering
      \begin{tabular}{||c | c  c  c ||} 
         \hline
@@ -63,7 +63,7 @@
 
 
 
-\begin{table}[ht]
+\begin{table}[H]
 \centering
      \begin{tabular}{||c | c  c  c ||} 
         \hline
