--- a/modAdder.tex
+++ b/modAdder.tex
@@ -51,10 +51,19 @@
 παρακάτω εικόνα.
 \\\\
 \textcolor{red}{[Βάλε εικόνα του Επιλογής κρατουμένου αθροιστή $2^n-1$]}
+
+\subsection{Prefix αθροιστές $2^n-1$ }
+% -----------------------------------------------
+% G_{} = τα κρατούμενα του πρώτου επιπέδου 
+% G_{}^' = τα κρατούμενα του δεύτερου επιπέδου
+% -----------------------------------------------
+
+J.J. Shedletsky, ªComment on the Sequential and Indeterminate
+Behavior of an End-Around-Carry Adder,º IEEE Trans. Computers,
+vol. 26, pp. 271-272, Mar. 1977.
 \\\\
-
-
-
+J.F. Wakerly, ªOne's Complement Adder Eliminates Unwanted
+Zero,º Electronics, pp. 103-105, Feb. 1976.
 
 
 
@@ -63,9 +72,15 @@
 
 Χρησιμοποιώντας τον ειδικό τελεστή που παρουσιάστηκε στο κεφάλαιο 4 $"\circledast"$
 ο αθροιστής υπολοίπου $2^n-1$ μπορεί να υλοποιηθεί με ένα ακόμα παράλληλο τμήμα 
-με αποτέλεσμα να μειωθεί κατά ένα επίπεδο λιγότερο ο υπολογισμός του.
-
-
+με αποτέλεσμα να μειωθεί κατά ένα επίπεδο ο υπολογισμός του \cite{vergos}.
+% -----------------------------------------------
+% G_{} = τα κρατούμενα του πρώτου επιπέδου 
+% G_{}^' = τα κρατούμενα του δεύτερου επιπέδου
+% G_{}^* = τα κρατούμενα της νέας αρχιτεκτονικής
+% -----------------------------------------------
+Όπως εξηγήθηκε προηγουμένως το κρατούμενο εισόδου στον αθροιστή υπολοίπου n δυαδικών 
+ψηφίων είναι ίσο με το κρατούμενο εξόδου του $c_{-1} = G_{n-1}$, άρα ισχύει και 
+$(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$.
 
 
 
