Updates from ShareLaTeX

--- a/Development.tex
+++ b/Development.tex
@@ -2,12 +2,12 @@
 
 Σε αυτό το κεφάλαιο θα αναπτυχθούν συνολικά δώδεκα αθροιστές υπολοίπου $2^n-1$
 ακολουθώντας την αρχιτεκτονική που παρουσιάστηκε στο προηγούμενο κεφάλαιο 
-με τα ελάχιστα επίπεδα. Οι αθροιστές θα χωριστούς σε τρείς ομάδες ανάλογα με την 
-παραγοντοποίηση που τους εφαρμόζεται. Τις ομάδες αυτές είναι Prefix, Ling και Jackson ,
+με τα ελάχιστα επίπεδα. Ανάλογα με την παραγοντοποίηση που τους εφαρμόζεται 
+οι αθροιστές ομαδοποιούνται σε τρείς ομάδες, Prefix, Ling και Jackson,
 και σε κάθε ομάδα θα αναπτυχθεί ένας 8-bit, ένας 16-bit, ένας 32-bit και ένας 64-bit 
-αθροιστής. Για κάθε ομάδα θα αναλύεται ο 8-bit αθροιστής λόγω των ευδιάκριτου 
-σχήματος που τον περιγράφει, ενώ για τους υπόλοιπους θα δωθεί πλήρη η συναρτησιακή 
-λογική σε άλγεβρα Μπουλ.
+αθροιστής. Για κάθε ομάδα θα αναλύεται και σχηματικά ο 8-bit αθροιστής λόγω του 
+ευδιάκριτου σχήματος που τον περιγράφει, ενώ για τους υπόλοιπους θα δοθεί η
+συναρτησιακή λογική πλήρως σε άλγεβρα Μπουλ.
 
 \subsection{Prefix $2^n-1$}
 %\subsubsection{$2^8-1$}
