--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -153,7 +153,17 @@ Electronic Computers, vol. 9, no. 6, pp. 226-231, June 1960.
 
 
 
+\subsection{Αραίωση των Δέντρων}
+Οι δομές που περιγράφηκαν για την παραλληλοποίηση του υπολογισμού των κρατουμένων 
+είναι αρκετά πυκνά όσο αφορά τους μαύρους κόμβου, το οποίο συνεπάγει το ότι 
+απαιτείται αρκετή ενέργεια και εμβαδόν. Με σκοπό την αραίωση (sparseness), 
+είναι δυνατό να υπολογίζονται λιγότερα κρατούμενα από τα ενδιάμεσα στάδια,
+δηλαδή το δέντρο, και υπολογίζοντας τα υπόλοιπα με διάδοση.
 
+Για παράδειγμα υπολογίζοντας το κρατούμενο που παράγεται από το τρίτο έως το 
+μηδενικό δυαδικό ψηφίο, δηλαδή το $G_{3:0}$ και εισάγωντας στο στο κρατούμενο 
+εισόδου ενός αθροιστή επιλογής κρατουμένου (CSA) των τεσσάρων δυαδικών ψηφίων 
+με είσοδο τα δυαδικά ψηφία $7:0$ \cite{Sparseness_ling}.
 
 
 
