--- a/references.bib
+++ b/references.bib
@@ -39,3 +39,9 @@ author = {H. Ling},
 title = {High speed binary adder},
 year = {1981}
 }
+
+@Article{Sparseness_ling,
+author = {Giorgos Dimitrakopoulos and Dimitris Nikolos},
+title = {High-Speed Parallel-Prefix VLSI Ling Adders},
+year = {2005}
+}
